# scall

./: .cirrus.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  extract-syscalls.yml
examples/: hello.rs
src/: args64.rs  lib.rs  macros.rs
src/platform/: android-armeabi
src/platform/android-armeabi/: eno.rs  mod.rs  nr.rs
src/platform/freebsd-x86_64/: eno.rs  mod.rs  nr.rs
src/platform/linux-aarch64/: eno.rs  mod.rs  nr.rs
src/platform/linux-armeabi/: eno.rs  mod.rs  nothumb.rs  nr.rs  thumb.rs
src/platform/linux-mips/: eno.rs  mod.rs  nr.rs
src/platform/linux-mips64/: eno.rs  mod.rs  nr.rs
src/platform/linux-powerpc/: eno.rs  mod.rs  nr.rs
src/platform/linux-powerpc64/: eno.rs  mod.rs  nr.rs
src/platform/linux-riscv64/: eno.rs  mod.rs  nr.rs
src/platform/linux-sparc64/: eno.rs  mod.rs  nr.rs
src/platform/linux-x86/: eno.rs  mod.rs  nr.rs
src/platform/linux-x86_64/: eno.rs  mod.rs  nr.rs
src/platform/macos-aarch64/: eno.rs  mod.rs  nr.rs
src/platform/macos-x86_64/: eno.rs  mod.rs  nr.rs
tests/: test.rs
tools/: bsd_eno_from_src.py  bsd_nr_from_src.py  eno_from_src.py  nr_from_src.py
