[package]
name = "scall"
version = "0.1.0"
edition = "2018"

description = "Friendlier raw system calls"
readme = "README.md"
authors = ["The syscall.rs Project Developers", "cptpcrd"]
keywords = ["syscall", "system", "call"]

license = "MIT/Apache-2.0"
repository = "https://github.com/cptpcrd/scall"

[dev-dependencies]
libc = "0.2"
