[package]
name = "scall"
version = "0.2.0"
edition = "2018"

description = "Friendlier raw system calls for Rust."
readme = "README.md"
authors = ["The syscall.rs Project Developers", "cptpcrd"]
keywords = ["syscall", "system", "call"]

license = "MIT OR Apache-2.0"
repository = "https://github.com/cptpcrd/scall"

[dev-dependencies]
libc = "0.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-freebsd"]
